@@ -28,3 +28,26 @@ set -e
 ltlcross -f FGa \
   'ltl2tgba -G -D %f | autfilt --complement >%O' \
   'ltl2tgba -G -D %f | autfilt --complement | autfilt --simplify-acceptance >%O'
+
+
+cat >325 <<EOF
+HOA: v1
+States: 1
+Start: 0
+AP: 2 "a" "b"
+acc-name: Rabin 3
+Acceptance: 6 (Fin(0) & Inf(1)) | (Fin(2) & Inf(3)) | (Fin(4) & Inf(5))
+properties: trans-labels explicit-labels trans-acc complete
+properties: deterministic
+--BODY--
+State: 0
+[!0&!1] 0 {0 4}
+[!0&1] 0 {0 3 4}
+[0&!1] 0 {2 5}
+[0&1] 0 {1 2 5}
+--END--
+EOF
+
+autfilt --simplify-acceptance 325 > 325s
+exp='4 Fin(0) | (Fin(0) & Inf(1)) | (Fin(2) & Inf(3))'
+test "$exp" = "`autfilt --stats='%a %g' 325s`"
