@@ -12,6 +12,12 @@ New in spot 2.5.0.dev (not yet released)
 
   - iar() and iar_maybe() properly handle Rabin-like conditions.
 
+  - is_generalized_rabin() had a typo that caused some non-simplified
+    acceptance conditions like Fin(0)|(Fin(0)&Inf(1)) to be
+    incorrectly detecteded as generalized-Rabin 2 0 1 and then output
+    as Fin(0)|(Fin(1)&Inf(2)) instead.  Likewise for
+    is_generalized_streett
+
 New in spot 2.5 (2018-01-20)
 
   Build:
